docs/version_goal/v102/summary.md
# v102 版本更新摘要

本版本主要包含番茄钟全屏聚焦体验优化、任务备注富文本与附件支持、清单撤销重做功能集成，以及 Android 构建兼容性优化。

## 新增功能
1. **任务备注富文本编辑器**
   - 任务备注输入框全面升级为富文本编辑器，支持 Markdown 语法编辑 and 渲染（如标题、粗体、斜体、列表等）。
2. **任务附件管理**
   - 任务详情中新增附件插入支持，用户可以向任务添加图片、文档等各类文件，并支持附件的预览与删除。
3. **清单操作撤销与重做**
   - 清单的创建、修改和删除操作已接入全局撤销重做系统。
   - 删除清单时，该清单下的所有任务均会自动归档或备份；撤销删除清单时，系统能自动恢复清单并级联找回原来属于该清单的所有任务。
   - 撤销重做历史页面新增清单操作类型记录的渲染 and 过滤统计。
4. **前台任务到期提醒弹窗**
   - 新增前台运行时的任务到期自动提醒机制。当任务到达提醒时间（设定的开始时间减去提前提醒偏移分钟）时，会从底部弹出任务提醒面板。
   - 提醒面板支持“稍后提醒”（自动推迟 15 分钟并届时重新提醒）、“我知道了”（关闭提醒）和“去完成”（一键将该任务标记为已完成并关闭提醒）等快捷交互。
5. **本地核心数据备份与恢复（导入/导出/清除功能）**
   - 新增本地核心业务数据的导入、导出和物理清除三大管理模块。数据范围涵盖：任务、清单、习惯、打卡记录、番茄专注记录与自定义番茄钟。页面配置与操作撤销历史元数据不纳入迁移，以保持备份一致性。
   - **人性化路径选择**：全面接入 `file_picker` 库，在导入和导出时均支持图形化调起系统级保存/打开文件对话框进行路径和位置的定位，同时也保留文本输入框以供快捷直接的二次修改与预览。
   - **安全与防呆交互**：在覆盖导入和物理清除核心业务数据时会弹出明确的二次红色警告弹窗。数据导入或清除完毕后，应用将自动完成底层数据加载，并对 Checklist、Task 和 Tomato 等全局 Provider 进行数据与界面的静默静刷新，实现体验的无缝升级。

## 优化与改进
1. **番茄钟全屏页面体验重构**
   - 全屏专注页面全面优化，支持三种显示模式的交互切换（点击背景或特定按钮即可循环/回退）：
     - **白色主题（默认）**：纯白底色，展示完整计时环、关联任务、快捷设置 and 全部控制按钮。
     - **黑色主题**：纯黑底色与浅色文字，适配暗光环境，保留完整计时及控制功能。
     - **沉浸模式**：纯黑极简底色，隐藏除核心计时区域外的所有元素（如导航栏、控制按钮、快捷设置等）。
   - 沉浸模式下支持左右滑动切换两种计时界面样式：
     - **圆环进度条样式**：带有白色极简环形进度条、大字号时间和当前状态展示。
     - **纯数字样式**：无进度环，仅以极简超大字号显示剩余时间及状态。
   - 修复并优化了专注进度指示器的同步与显示逻辑。
2. **动态日历图标**
   - 升级底部导航栏“日历视图”的图标，使其自动显示当前日期的天数，并自适应底部导航栏的主题色 and 选中/未选中状态。
3. **任务详情页布局与交互优化**
   - **三段式分区布局**：任务详情页重新划分为上、中、下三部分，其中仅有中部内容区支持滚动，头部操作区与底部快捷键区保持固定，提升交互效率。
   - **固定头部区域**：集成了返回键、清单选择（点击触发下拉菜单）、优先级选择（点击触发下拉菜单）、更多操作（包含关联主任务、删除、复制功能）、任务完成状态勾选框以及任务起止时间段展示与点击修改。
   - **滚动中部区域**：包含任务名称、富文本任务描述、检查点列表、多个已选标签的 Chip 展示以及子任务列表。
   - **固定底部快捷栏**：集成了标签选择与新建、新建检查点、新建子任务三大快捷入口。
4. **全新标签选择管理器 (TagPickerDialog)**
   - 引入全新设计的标签选择器弹窗，支持对现有标签进行搜索和复选多选。
   - 在搜索无匹配标签时，支持一键直接创建并应用新标签。

## 问题修复
1. **Android 构建环境兼容性修复**
   - 升级 `Android Gradle Plugin (AGP)` 版本至 `8.9.1`，解决项目构建时发生的第三方 AAR 元数据依赖校验冲突问题。
   - 优化了 Android 下文件/媒体库读取权限的相关配置，保证任务备注插入附件功能正常运行。
2. **四象限视图崩溃修复与体验简化**
   - 修复了进入时间管理四象限页面时可能引发的应用崩溃问题。
   - 简化了四象限页面中的任务卡片渲染，每个任务仅以极简单行（方框及任务名称）显示，大幅提升了在受限多象限卡片空间下的展示美观度。
   - 分离了任务项的点击交互，用户可点击方框直接切换任务完成状态，或点击任务名称快速进入对应的任务详情。
